--- a/org.eclipse.jgit.http.apache/pom.xml
+++ b/org.eclipse.jgit.http.apache/pom.xml
@@ -48,7 +48,7 @@
 	<parent>
 		<groupId>org.eclipse.jgit</groupId>
 		<artifactId>org.eclipse.jgit-parent</artifactId>
-		<version>5.1.12-SNAPSHOT</version>
+		<version>5.1.12.201910011832-r</version>
 	</parent>
 
 	<artifactId>org.eclipse.jgit.http.apache</artifactId>
