--- a/org.eclipse.jgit.ssh.apache/pom.xml
+++ b/org.eclipse.jgit.ssh.apache/pom.xml
@@ -50,7 +50,7 @@
   <parent>
     <groupId>org.eclipse.jgit</groupId>
     <artifactId>org.eclipse.jgit-parent</artifactId>
-    <version>5.3.6-SNAPSHOT</version>
+    <version>5.3.6.201910020505-r</version>
   </parent>
 
   <artifactId>org.eclipse.jgit.ssh.apache</artifactId>
