Bazel: Remove superfluous dependencies flagged by unused_deps
Bazel buildtools project includes in addition to buildifier also unused
deps and buildozer utilities, that detect unused dependencies and fix
them by applying the removal to the build files. This change is created
by installing unused_deps from buildtools@HEAD and running:

  $ unused_deps //...

and applying the suggested modifications.

Change-Id: Iad74ec2fa719475b29391586f40b13ae30477004
Signed-off-by: David Ostrovsky <david@ostrovsky.org>

--- a/org.eclipse.jgit.pgm/BUILD
+++ b/org.eclipse.jgit.pgm/BUILD
@@ -7,7 +7,6 @@ java_library(
     resources = glob(["resources/**"]),
     visibility = ["//visibility:public"],
     deps = [
-        ":services",
         "//lib:args4j",
         "//lib:commons-logging",
         "//lib:httpclient",
@@ -32,7 +31,10 @@ java_library(
 java_binary(
     name = "jgit",
     main_class = "org.eclipse.jgit.pgm.Main",
-    runtime_deps = [":pgm"],
+    runtime_deps = [
+        ":pgm",
+        ":services",
+    ],
 )
 
 java_import(
