Add dependencies to enable migration to junit 5
Keep compile time dependency to JUnit 4 until all tests are migrated to
JUnit 5.

This doesn't yet work for running JUnit 5 tests from bazel since there
is still no native support for JUnit 5 in bazel yet [1]. There is a PoC
by the JUnit 5 team [2] we could use as a starting point.

[1] https://github.com/bazelbuild/bazel/issues/6681
[2] https://github.com/junit-team/junit5-samples/tree/master/junit5-jupiter-starter-bazel

Bug: 552480
Change-Id: I8aea172ab5cccc7869711cd9a38fadbbe6f428f7
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.jgit.http.test/BUILD
+++ b/org.eclipse.jgit.http.test/BUILD
@@ -19,6 +19,7 @@ junit_tests(
         "//lib:jetty-servlet",
         "//lib:jetty-util",
         "//lib:junit",
+        "//lib:junit4",
         "//lib:servlet-api",
         "//lib:slf4j-api",
         "//lib:slf4j-simple",
@@ -36,6 +37,7 @@ java_library(
     srcs = glob(["src/**/*.java"]),
     deps = [
         "//lib:junit",
+        "//lib:junit4",
         "//lib:servlet-api",
         "//org.eclipse.jgit.http.server:jgit-servlet",
         "//org.eclipse.jgit:jgit",
