--- a/org.eclipse.jgit.junit/BUILD
+++ b/org.eclipse.jgit.junit/BUILD
@@ -9,6 +9,7 @@ java_library(
     resource_strip_prefix = "org.eclipse.jgit.junit/resources",
     resources = glob(["resources/**"]),
     deps = [
+        "//lib:junit4",
         "//lib:junit",
         # We want these deps to be provided_deps
         "//org.eclipse.jgit:jgit",
