Add dependencies to enable migration to junit 5
Keep compile time dependency to JUnit 4 until all tests are migrated to
JUnit 5.

This doesn't yet work for running JUnit 5 tests from bazel since there
is still no native support for JUnit 5 in bazel yet [1]. There is a PoC
by the JUnit 5 team [2] we could use as a starting point.

[1] https://github.com/bazelbuild/bazel/issues/6681
[2] https://github.com/junit-team/junit5-samples/tree/master/junit5-jupiter-starter-bazel

Bug: 552480
Change-Id: I8aea172ab5cccc7869711cd9a38fadbbe6f428f7
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/lib/BUILD
+++ b/lib/BUILD
@@ -187,6 +187,15 @@ java_library(
 )
 
 java_library(
+    name = "junit4",
+    testonly = 1,
+    visibility = ["//visibility:public"],
+    exports = [
+        "@junit//jar",
+    ],
+)
+
+java_library(
     name = "junit",
     testonly = 1,
     visibility = ["//visibility:public"],
@@ -195,9 +204,13 @@ java_library(
         "@bytebuddy//jar",
         "@hamcrest-core//jar",
         "@hamcrest-library//jar",
-        "@junit//jar",
+        "@junit-jupiter-api//jar",
+        "@junit-jupiter-engine//jar",
+        "@junit-platform//jar",
+        "@junit-vintage-engine//jar",
         "@mockito//jar",
         "@objenesis//jar",
+        "@opentest4j//jar",
     ],
 )
 
