Add dependencies to enable migration to junit 5
Keep compile time dependency to JUnit 4 until all tests are migrated to
JUnit 5.

Bug: 552480
Change-Id: I8aea172ab5cccc7869711cd9a38fadbbe6f428f7
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.jgit.lfs.test/BUILD
+++ b/org.eclipse.jgit.lfs.test/BUILD
@@ -24,6 +24,7 @@ java_library(
     testonly = 1,
     srcs = glob(["src/**/*.java"]),
     deps = [
+        "//lib:junit4",
         "//lib:junit",
         "//org.eclipse.jgit:jgit",
         "//org.eclipse.jgit.junit:junit",
