--- a/org.eclipse.jgit.pgm.test/BUILD
+++ b/org.eclipse.jgit.pgm.test/BUILD
@@ -34,6 +34,7 @@ java_library(
     srcs = glob(["src/**/*.java"]),
     deps = [
         "//lib:args4j",
+        "//lib:junit4",
         "//lib:junit",
         "//org.eclipse.jgit:jgit",
         "//org.eclipse.jgit.junit:junit",
