Migrate test base classes in org.eclipse.jgit.junit to JUnit 5
Also migrate all tests which depend on assertions provided by these base
classes to avoid mix of JUnit 4 and 5 in the same test.

To enable incremental migration put both @Before and @BeforeEach and
@After and @AfterEach annotations on setup and tearDown methods in the
base classes.

This doesn't yet work for running JUnit 5 tests from bazel since there
is still no native support for JUnit 5 in bazel yet [1]. There is a PoC
by the JUnit 5 team [2] we could use as a starting point.

[1] https://github.com/bazelbuild/bazel/issues/6681
[2] https://github.com/junit-team/junit5-samples/tree/master/junit5-jupiter-starter-bazel

Bug: 552480
Change-Id: Ia7945e22afc1d54dbb7ee0f120fb609a3b0cefff
Signed-off-by: Matthias Sohn <matthias.sohn@sap.com>

--- a/org.eclipse.jgit.junit/pom.xml
+++ b/org.eclipse.jgit.junit/pom.xml
@@ -77,7 +77,26 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.junit.platform</groupId>
+        <artifactId>junit-platform-launcher</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
     </dependency>
   </dependencies>
 
